--- a/index.html
+++ b/index.html
@@ -411,6 +411,9 @@
 	</div>
 </div>
 
+<script src="plugins/validators/validator.js"></script>
+
 <script src="script/script.js"></script>
+
 </body>
 </html>
