--- a/lesson23/23.html
+++ b/lesson23/23.html
@@ -25,6 +25,6 @@
     <p><b>23:00</b> В это время процесс обмена веществ максимально замедляется, снижается температура тела и частота пульса. Наступает фаза глубокого сна, когда наш организм лучше всего отдыхает. Совет: в это время уже лежать в кровати </p>
     <p><b>00:60</b> Период, когда возрастает желание спать. В это время не рекомендуется есть и пить сладкое</p>
     <p><b>02:00</b> Период, когда все химические реакции замедлены, гормоны практически не вырабатываются. Отсутствие сна в это время может привести к ухудшению состояния и настроения в течение всего дня. "Срочно спать" http://sleep.ru.</p> </div>
-<script src="script/23.js"></script>
+<script src="23.js"></script>
 </body>
 </html>
