--- a/index.html
+++ b/index.html
@@ -410,7 +410,14 @@
 		</div>
 	</div>
 </div>
-
+<div class="sk-chase">
+	<div class="sk-chase-dot"></div>
+	<div class="sk-chase-dot"></div>
+	<div class="sk-chase-dot"></div>
+	<div class="sk-chase-dot"></div>
+	<div class="sk-chase-dot"></div>
+	<div class="sk-chase-dot"></div>
+</div>
 
 <script src="script/script.js"></script>
 
