--- a/index.html
+++ b/index.html
@@ -12,11 +12,18 @@
 	<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="./images/favicon/favicon-16x16.png">
 	<link rel="mask-icon" href="./images/favicon/safari-pinned-tab.svg" color="#5bbad5">
+	<link rel="stylesheet" href="css/spinkit.min.css">
 	<meta name="msapplication-TileColor" content="#b91d47">
 	<meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
+<div class="preloader loaded">
+	<div class="preloader__row">
+		<div class="preloader__item"></div>
+		<div class="preloader__item"></div>
+	</div>
+</div>
 
 <main>
 	<header>
@@ -410,16 +417,16 @@
 		</div>
 	</div>
 </div>
-<div class="sk-chase">
-	<div class="sk-chase-dot"></div>
-	<div class="sk-chase-dot"></div>
-	<div class="sk-chase-dot"></div>
-	<div class="sk-chase-dot"></div>
-	<div class="sk-chase-dot"></div>
-	<div class="sk-chase-dot"></div>
-</div>
+
+
 
 <script src="script/script.js"></script>
+<!--<script>-->
+<!--	window.onload = function () {-->
+<!--		document.body.classList.add('loaded');-->
+<!--	}-->
+<!--</script>-->
+
 
 </body>
 </html>
