--- a/index.html
+++ b/index.html
@@ -421,12 +421,7 @@
 
 
 
-<script src="script/script.js"></script>
-<!--<script>-->
-<!--	window.onload = function () {-->
-<!--		document.body.classList.add('loaded');-->
-<!--	}-->
-<!--</script>-->
+<script src="dist/main.js"></script>
 
 
 </body>
